--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,3 +1,5 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+	<a href="{% url 'bookupload' %}">upload</a>
+	<a href="{% url 'booklist' %}">list</a>
 {% endblock %}
